# image_to_sensor_cv

./: .flake8  .gitignore  DEBUG_GUIDE.md  DOCKER_INSTALL.md  Makefile  README.md  VALIDATION.md  __init__.py  check_logs.sh  config_flow.py  const.py  debug_utils.py  example_config.yaml  find_debug_files.sh  image_processing.py  image_processing_ha.py  image_processing_simple.py  install_opencv.sh  manifest.json  manifest_minimal.json  pyproject.toml  quick-check.sh  requirements-dev.txt  sensor.py  services.py  services.yaml  strings.json  validate.sh
docs/: ANGLE_FIXES_SUMMARY.md
outdate/: image_processing_cv2.py  manifest_opencv.json
tests/: __init__.py  fix_test_case.py  gauge_analyzer.py  requirements.txt  simple_test_runner.py  test_angles.py  test_builder.py  test_runner.py  tests.json  validate_vectors.py
