[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image_to_sensor_cv"
version = "1.0.0"
description = "Home Assistant custom component for image processing and sensor creation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=9.0.0",
    "numpy>=1.20.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
  | outdate
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["__pycache__", "*.pyc", "outdate/*"]

[tool.mypy]
python_version = "3.11"
platform = "linux"
show_error_codes = true
follow_imports = "normal"
ignore_missing_imports = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pylint.MASTER]
ignore = ["tests", "outdate", "__pycache__"]
jobs = 0
persistent = true
extension-pkg-whitelist = ["cv2"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-locals",
    "duplicate-code",
    "fixme",
    "broad-except",
    "missing-module-docstring",
    "import-error",
    "no-member",
]

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pylint.BASIC]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "x", "y", "dx", "dy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests", "outdate", "__pycache__"]
skips = ["B101", "B601"]
